--- a/client/angular.json
+++ b/client/angular.json
@@ -31,7 +31,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/semantic.min.css",
+              "src/assets/semantic.grid.min.css"
             ],
             "scripts": []
           },
@@ -94,7 +96,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/semantic.min.css",
+              "src/assets/semantic.grid.min.css"
             ],
             "scripts": []
           }
